api-gw-fed/waypoint-demo/waypoint/03-httproute-gwapi.yaml
---
# Add a header using plain kubernetes gateway api
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
  - name: gloo-waypoint
  rules:
  - matches:
    - path:
        type: Exact
        value: /hello
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Traversed-Waypoint
          value: gloo-waypoint
    backendRefs:
    - name: helloworld
      port: 5000
