api-gw-fed/waypoint-demo/waypoint/04-routeoption-gloo.yaml
# Add a header using a combination of HTTPRoute and Gloo's RouteOption API
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloworld-gloo-routeoption
spec:
  parentRefs:
  - name: gloo-waypoint
  rules:
  - matches:
    - path:
        type: Exact
        value: /hello
    filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: gloo-header
    backendRefs:
      - name: helloworld
        port: 5000
---
